<resources>
    <string name="app_name">Общежития ВШЭ</string>
    <string name="dateToday">Сегодня</string>
    <string name="dateNow">Сейчас</string>
    <string name="dateTomorrow">Завтра</string>
    <string name="Tdeparture">Отправляемся из:</string>
    <string name="Tarrival">В:</string>
    <string name="detectingLocation">определение местоположения</string>
    <string name="swap">Обратно</string>
    <string name="detectedLocationIsWrong">Выбрать</string>
    <string name="train_to">до %s</string>
    <string name="sc_main">
        Привет, студент Вышки!\n\nЖивёшь в Одинцово или Дубках?\n\nЗапускай приложение перед выходом из учебного корпуса или общаги\n\nМы спланируем твой маршрут.</string>
    <string name="sc_departure">Ближайший к тебе корпус или общежитие определяются автоматически</string>
    <string name="sc_arrival">Выбери пункт назначения из списка</string>
    <string name="sc_date">Можно запланировать поездку заранее.\n\nЗавтра ты не проспишь первую пару!</string>
    <string name="sc_go">Поехали!</string>

    <string name="contact_email">Напишите на адрес: vmax0770@gmail.com с темой «Дубки»</string>
    <string name="map">Карта</string>

    <string name="onfoot_time">%d минут</string>
    <string name="train_dialog_message">Остановки: %s</string>


    <string name="route_title" translatable="false">%1$s — %2$s</string>
    <string name="no_internet">Интернет-соединение недоступно</string>
    <string name="no_internet_settings">Настройки</string>'

    <string name="byebye_title">Проект закрыт</string>
    <string name="byebye_message">К сожалению, пользователей было недостаточно, чтобы мне хватало мотивации поддерживать его.
        Классные ребята перестали поставлять актуальное расписание автобусов и некоторое время оно обновлялось вручную</string>
    <string name="byebye_bots">На данный момент Вам смогут помочь Telegram-боты <a href="http://telegram.me/dubkibus_bot">@dubkibus_bot</a> и
    <a href="http://telegram.me/dubkitrains_bot">@dubkitrains_bot</a></string>


</resources>