<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootCoordinatorLayout">

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_maps_navigation"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_gravity="end|bottom"
        android:id="@+id/fabGo"/>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="vmax.hsedorms.MainActivity"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spacer"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/Tdeparture"
        android:gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/departure"
        android:gravity="center"
        android:text="@string/detectingLocation"
        style="@style/Base.TextAppearance.AppCompat.Subhead" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:weightSum="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swapDestinations"
            android:text="@string/swap"
            android:layout_gravity="left"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detectedLocationIsWrong"
            android:id="@+id/departureIsIncorrect"
            android:layout_gravity="right"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/Tarrival"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        style="@style/Base.TextAppearance.AppCompat.Title" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/arrivalSelector"
></Spinner>

    <info.hoang8f.android.segmented.SegmentedGroup
        xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="10dp"
        android:orientation="horizontal"
        android:id="@+id/dateSelector">

        <RadioButton
            android:id="@+id/dateToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateToday"
            android:textAllCaps="true"
            android:layout_weight="1"
            style="@style/RadioButton"/>

        <RadioButton
            android:id="@+id/dateNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateNow"
            android:textAllCaps="true"
            android:layout_weight="1"
            android:checked="true"
            style="@style/RadioButton"/>

        <RadioButton
            android:id="@+id/dateTomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateTomorrow"
            android:textAllCaps="true"
            android:layout_weight="1"
            style="@style/RadioButton"/>

    </info.hoang8f.android.segmented.SegmentedGroup>

    <TextView
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="Время:"
        android:id="@+id/timeSelectorTitle"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Spinner
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeSelector"/>


</LinearLayout>

</android.support.design.widget.CoordinatorLayout>
